Board no longer overrides hit/miss visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
     height: 60vh;
 }
 #opponent-board>div {
-    background: dodgerblue !important;
+    background: dodgerblue;
 }
 .ship-container {
     display: flex;
